--- a/Website_HTML_File.Rhtml
+++ b/Website_HTML_File.Rhtml
@@ -1,23 +1,34 @@
 <html>
 
 <head>
-<title>website HTML file</title>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
-<style>
-    /* Set the font-family to Lato for the navbar title */
-    .navbar-title {
-      font-family: 'Lato', sans-serif;
+  <title>website HTML file</title>
+  <style>
+    @font-face {
+      font-family: 'Kannada MN';
+      src: url('fonts/KannadaMN.ttc') format('truetype');
+      font-weight: normal;
+      font-style: normal;
     }
+
+    .navbar-title {
+      font-family: 'Kannada MN', sans-serif;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+    
+  </style>
 </head>
 
+
 <body>
- <h1>Hello, Quarto!</h1>
-  <p>This is an R HTML page in Quarto.</p>
+
   <div class="navbar">
     <div class="navbar-title">
       Annette Loke
     </div>
   </div>
+
 
 
 </body>
